--- a/10 Module/10.1
+++ b/10 Module/10.1
@@ -1,3 +1,22 @@
+'''
+Необходимо создать функцию wite_words(word_count, file_name), где word_count - количество записываемых слов, file_name - название файла, куда будут записываться слова.
+Функция должна вести запись слов "Какое-то слово № <номер слова по порядку>" в соответствующий файл с прерыванием после записи каждого на 0.1 секунду.
+Сделать паузу можно при помощи функции sleep из модуля time, предварительно импортировав её: from time import sleep.
+В конце работы функции вывести строку "Завершилась запись в файл <название файла>".
+
+После создания файла вызовите 4 раза функцию wite_words, передав в неё следующие значения:
+10, example1.txt
+30, example2.txt
+200, example3.txt
+100, example4.txt
+После вызовов функций создайте 4 потока для вызова этой функции со следующими аргументами для функции:
+10, example5.txt
+30, example6.txt
+200, example7.txt
+100, example8.txt
+Запустите эти потоки методом start не забыв, сделать остановку основного потока при помощи join.
+Также измерьте время затраченное на выполнение функций и потоков. Как это сделать рассказано в лекции к домашнему заданию.
+'''
 import time
 from threading import Thread
 
@@ -21,20 +40,21 @@ time_res1 = time_end1 - time_start1
 print(f'Общее время работы: {time_res1}')
 
 time_start2 = time.time()
-th1 = Thread(target=wite_words(10, 'example5.txt'))
-th2 = Thread(target=wite_words(30, 'example6.txt'))
-th3 = Thread(target=wite_words(200, 'example7.txt'))
-th4 = Thread(target=wite_words(100, 'example8.txt'))
+th1 = Thread(target=wite_words, args=(10, 'example5.txt'))
+th2 = Thread(target=wite_words, args=(30, 'example6.txt'))
+th3 = Thread(target=wite_words, args=(400, 'example7.txt'))
+th4 = Thread(target=wite_words, args=(100, 'example8.txt'))
 
 th1.start()
 th2.start()
 th3.start()
 th4.start()
-th1.join()
 
+th1.join()
 th2.join()
 th3.join()
 th4.join()
+
 time_end2 = time.time()
 time_res2 = time_end2 - time_start2
 print(f'Общее время работы с использованием потоков: {time_res2}')
